[gd_scene load_steps=29 format=3 uid="uid://cuvjqol5hr5pg"]

[ext_resource type="Script" path="res://entities/player_fsm/player.gd" id="1_s3pai"]
[ext_resource type="PackedScene" uid="uid://bvvwv2g7vbr40" path="res://entities/Stamina/Stamina.tscn" id="2_txufy"]
[ext_resource type="PackedScene" uid="uid://2cra11rol35o" path="res://entities/balance/balance.tscn" id="3_7gnxj"]
[ext_resource type="PackedScene" uid="uid://hwump8tofads" path="res://entities/inventory/inventory.tscn" id="4_44tum"]
[ext_resource type="PackedScene" uid="uid://cugjrmwt16ejf" path="res://entities/state_machine/state_machine.tscn" id="4_junko"]
[ext_resource type="PackedScene" uid="uid://bt1l6u0dxhrsp" path="res://entities/state_machine/state.tscn" id="5_qivkb"]
[ext_resource type="Script" path="res://entities/player_fsm/states/move.gd" id="6_nuhh4"]
[ext_resource type="Script" path="res://entities/player_fsm/states/jump.gd" id="7_jsgtv"]
[ext_resource type="Script" path="res://entities/player_fsm/states/swing.gd" id="7_tb2ro"]
[ext_resource type="Script" path="res://entities/player_fsm/states/fall.gd" id="8_cnpib"]
[ext_resource type="PackedScene" uid="uid://di3wmxtdgt23q" path="res://entities/Player/godot_model.glb" id="8_nm5rb"]
[ext_resource type="Texture2D" uid="uid://dt44kscncfq3m" path="res://entities/Player/shadow_blob.png" id="9_mqrpw"]
[ext_resource type="Script" path="res://entities/player_fsm/states/hang.gd" id="9_ooy06"]
[ext_resource type="Script" path="res://entities/player_fsm/states/vault.gd" id="10_rnvwx"]
[ext_resource type="Script" path="res://entities/player_fsm/states/pickup.gd" id="12_0hcjg"]
[ext_resource type="Script" path="res://entities/player_fsm/states/camp.gd" id="13_do0ni"]
[ext_resource type="Script" path="res://entities/player_fsm/states/held.gd" id="14_o2l5l"]
[ext_resource type="Script" path="res://entities/player_fsm/states/lift.gd" id="15_ijiyv"]
[ext_resource type="Script" path="res://entities/player_fsm/states/belay.gd" id="16_trxpn"]
[ext_resource type="Script" path="res://entities/player_fsm/states/abseil_ground.gd" id="18_jyws2"]
[ext_resource type="Script" path="res://entities/player_fsm/states/abseil_start_down.gd" id="19_bjkod"]
[ext_resource type="Script" path="res://entities/player_fsm/states/abseil_start_up.gd" id="20_crmxd"]
[ext_resource type="Script" path="res://entities/player_fsm/states/abseil_wall.gd" id="21_n8xx8"]
[ext_resource type="Script" path="res://entities/player_fsm/states/abseil_air.gd" id="22_c28ya"]
[ext_resource type="Script" path="res://entities/player_fsm/states/debug.gd" id="23_ud6fb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d63ma"]
radius = 0.25
height = 1.6

[sub_resource type="SphereShape3D" id="SphereShape3D_c3m2q"]
radius = 0.6

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nu83u"]
height = 1.0
radius = 0.65

[node name="Player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.982809, 0)
collision_layer = 2
script = ExtResource("1_s3pai")

[node name="Stamina" parent="." instance=ExtResource("2_txufy")]

[node name="Balance" parent="." instance=ExtResource("3_7gnxj")]

[node name="Inventory" parent="." instance=ExtResource("4_44tum")]

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="StandStillTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="StateMachine" parent="." instance=ExtResource("4_junko")]

[node name="Move" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("6_nuhh4")

[node name="Jump" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("7_jsgtv")

[node name="Fall" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("8_cnpib")

[node name="Hang" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("9_ooy06")

[node name="Vault" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("10_rnvwx")

[node name="Pickup" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("12_0hcjg")

[node name="Camp" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("13_do0ni")

[node name="Held" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("14_o2l5l")

[node name="Lift" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("15_ijiyv")

[node name="Swing" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("7_tb2ro")

[node name="Belay" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("16_trxpn")

[node name="AbseilGround" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("18_jyws2")

[node name="AbseilStartDown" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("19_bjkod")

[node name="AbseilStartUp" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("20_crmxd")

[node name="AbseilWall" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("21_n8xx8")

[node name="AbseilAir" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("22_c28ya")

[node name="Debug" parent="StateMachine" instance=ExtResource("5_qivkb")]
script = ExtResource("23_ud6fb")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.181363, 0)
shape = SubResource("CapsuleShape3D_d63ma")

[node name="AbseilCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.181363, 0)
shape = SubResource("SphereShape3D_c3m2q")
disabled = true

[node name="Model" type="Node3D" parent="."]

[node name="godot_model" parent="Model" instance=ExtResource("8_nm5rb")]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 0, -0.997628, 0)

[node name="Decal" type="Decal" parent="Model"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -5.95234, 0)
extents = Vector3(0.3, 5, 0.3)
texture_albedo = ExtResource("9_mqrpw")
albedo_mix = 0.5
upper_fade = 1e-05

[node name="PickupArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.481408, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickupArea"]
shape = SubResource("CylinderShape3D_nu83u")
